fix : 기본 생성자 가시성 변경