@@ -8,6 +8,8 @@ group = 'camp.nextstep.edu'
 version = '0.0.1-SNAPSHOT'
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
@@ -23,25 +25,29 @@ repositories {
  * runtimeOnly : 런타임 시에만 필요
  * **/
 dependencies {
-    // Spring Web 스타터
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    // Spring Validation
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    // Spring JDBC 스타터, JDBC 사용에 필요
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    // Spring Thymeleaf
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    // Spring Boot 테스트
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    // Spring Data JPA
+    runtimeOnly 'mysql:mysql-connector-java:8.0.30' // MySQL 드라이버 의존성 추가
+
+    // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    // H2 데이터베이스
+    // Spring boot
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect') // thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // h2 DB
     runtimeOnly 'com.h2database:h2'
 }
 
@@ -50,6 +56,23 @@ tasks.named('test') {
 }
 
 test {
-    useJUnitPlatform()
     jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+bootRun {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--add-opens'
+    jvmArgs += 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs += '--add-opens'
+    jvmArgs += 'java.base/java.util=ALL-UNNAMED'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--add-opens'
+    jvmArgs += 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs += '--add-opens'
+    jvmArgs += 'java.base/java.util=ALL-UNNAMED'
 }
